Update Ertekin and Rudin ref

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -16,11 +16,11 @@ year = {2017},
 month = apr
 }
 
-@unpublished{RudinEr15,
-__author={Cynthia Rudin and Seyda Ertekin},
-author={C. Rudin and S. Ertekin},
-title={Learning Optimized Lists of Rules with Mathematical Programming},
-year={2015},
+@unpublished{ErtekinRu17,
+__author={Seyda Ertekin and Cynthia Rudin},
+author={S. Ertekin and C. Rudin},
+title={Learning Customized and Optimized Lists of Rules with Mathematical Programming},
+year={2017},
 note={Unpublished}
 }
 
