--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -145,7 +145,7 @@ In its current form, CORELS is not easy to adapt to similar problems,
 such as cost-sensitive learning or weighted regularization.
 %
 This could be remedied by creating more general versions of our theorems,
-which would be an extension of this work. \citep[Or one could use the more general but computationally heavy mixed-integer programming algorithm of][, which allows easy customization.]{ErtekinRu17}
+which would be an extension of this work. \citep[Or, one could use the more general but computationally heavy mixed-integer programming algorithm of][which allows easy customization.]{ErtekinRu17}
 %
 
 Lastly, CORELS does not create generic single-variable-split decision trees.
