--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -24,7 +24,7 @@ For models of a given size, since the class of DNF's is a proper subset of decis
 
 Some of our bounds, including the minimum support bound
 (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}),
-come from \citet{RudinEr15}, who provide flexible mixed-integer programming (MIP)
+come from \citet{ErtekinRu17}, who provide flexible mixed-integer programming (MIP)
 formulations using the same objective as we use here;
 MIP solvers in general cannot compete with the speed of CORELS.
 
