Minor edits to CPW figure caption

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -431,7 +431,7 @@ width=0.78\textwidth]{figs/cpw_tpr_fpr.pdf}
 for various models learned by CORELS and the heuristic model by~\citet{Goel16},
 across~10 cross-validation folds.
 %
-Note that the fraction of weapons recovered (top) is equal to the TPR (bottom).
+Note that the fraction of weapons recovered (top) is equal to the TPR (bottom, open markers).
 %
 Markers above the dotted horizontal lines at the value~0.5 correspond to models that
 recover a majority of weapons (that are known in the dataset).
@@ -451,7 +451,7 @@ showing 100\% of weapons recovered at 100\% of stops, obtained by setting the th
 Bottom: Comparison of TPR (open markers) and FPR (solid markers) for various
 CORELS and heuristic models.
 %
-Horizontal tick labels correspond to the legend in the top~figure.
+Markers and abbreviated horizontal tick labels correspond to the legend in the top~figure.
 }
 \label{fig:frisk}
 \end{figure}
