Minor edits about Appendix E datsets

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -49,6 +49,9 @@ the number of juvenile crimes that were neither felonies nor misdemeanors (not s
 \label{tab:recidivism-data}
 \end{table}
 
+\textbf{NYPD stop-and-frisk dataset.} This dataset is larger than, but similar to the
+NYCLU stop-and-frisk dataset, described next.
+
 %\clearpage
 \textbf{NYCLU stop-and-frisk dataset.} The original dataset contains 45,787 records,
 each describing an incident involving a stopped person; the individual
