--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -37,7 +37,10 @@ Table~1 summarizes the datasets and prediction problems,
 and Table~2 summarizes feature sets extract from each dataset,
 as well as antecedent sets we mine from these feature sets.
 %
-We provide further details next.
+We provide some details next.
+%
+For further details about datasets, preprocessing steps, and antecedent mining,
+see Appendix~\ref{appendix:data}.
 
 \begin{table}[t!]
 \centering
@@ -139,9 +142,6 @@ that each contain 50,743 datapoints.
 %
 From the same set of 5 categorical features as in Feature Set~C, we form a set of ${M=46}$
 single-clause antecedents (including negations).
-
-For further details about these datasets, preprocessing steps, and antecedent mining,
-see Appendix~\ref{appendix:data}.
 
 \subsection{Example optimal rule lists}
 \label{sec:examples}
